Updates to appserver and play validation

--- a/UCBC 2024/Simulations/Bidding1S.ipynb
+++ b/UCBC 2024/Simulations/Bidding1S.ipynb
@@ -23,7 +23,7 @@
       "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-2584000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-10724000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-6131000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
@@ -70,7 +70,11 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': 'PASS', 'insta_score': 0.986}]"
+       "[{'call': 'PASS',\n",
+       "  'insta_score': 0.958,\n",
+       "  'expected_score': -123,\n",
+       "  'adjustment': 48},\n",
+       " {'call': '2C', 'insta_score': 0.038, 'expected_score': -138, 'adjustment': 2}]"
       ]
      },
      "execution_count": 2,
@@ -100,7 +104,8 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': 'X', 'insta_score': 0.893}]"
+       "[{'call': 'X', 'insta_score': 0.943, 'expected_score': 71, 'adjustment': 47},\n",
+       " {'call': 'PASS', 'insta_score': 0.047, 'expected_score': 21, 'adjustment': 2}]"
       ]
      },
      "execution_count": 3,
@@ -110,7 +115,7 @@
    ],
    "source": [
     "auction = [\"1S\",\"PASS\",\"1N\",\"PASS\",\"2C\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 1, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n"
@@ -126,16 +131,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K9xxx.AQ.Qx.KT9x A.8xx.Jxx.AQxxxx Q8.KJxx.T9xxx.Jx JTxxx.T9xx.AK8.8 0.99771\n",
-      "KQ9xx.KQ.xx.KJT9 A.8xx.Jxx.AQxxxx x.JTxxx.AK9x.8xx JT8xxx.A9x.QT8x. 0.99759\n",
-      "KJTxx.K9.KT.KJT8 A.8xx.Jxx.AQxxxx Qx.AQTxx.xxx.9xx 98xxx.Jxx.AQ98x. 0.99759\n",
-      "K98xx.Jx.AQ.KJ8x A.8xx.Jxx.AQxxxx x.KQT9x.KT9xx.T9 QJTxxx.Axx.8xx.x 0.99750\n",
-      "KQT9x.K.Q8x.KJ8x A.8xx.Jxx.AQxxxx x.Txxx.AKT9xx.T9 J8xxxx.AQJ9x.x.x 0.99734\n",
-      "Qxxxx.ATx.A.KJT8 A.8xx.Jxx.AQxxxx K8.KJ9x.QT98.9xx JT9xx.Qxx.Kxxxx. 0.99676\n",
-      "KJ8xx.K.AQ9.T8xx A.8xx.Jxx.AQxxxx Tx.AJxx.KTxxx.J9 Q9xxx.QT9xx.8x.K 0.99662\n",
-      "KJ8xx.QTx.A.KJxx A.8xx.Jxx.AQxxxx Tx.Axx.KT98x.T98 Q9xxx.KJ9x.Qxxx. 0.99653\n",
-      "KQJxx.KJx.8.KJTx A.8xx.Jxx.AQxxxx 9.Q9xx.KQT9xx.98 T8xxxx.ATx.Axx.x 0.99640\n",
-      "KQJxx.Kx.8x.KJ9x A.8xx.Jxx.AQxxxx xx.AQJx.KTxxx.8x T98xx.T9xx.AQ9.T 0.99638\n"
+      "KQJxx.Q.Axx.K9xx A.8xx.Jxx.AQxxxx 8x.J9xx.KQ8x.JT8 T9xxx.AKTxx.T9x. 0.99947 \n",
+      " 1S-P-1N-P-2C-X-P-P-P (6.2)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (6.6) \n",
+      "Qxxxx.ATx.A.KJT8 A.8xx.Jxx.AQxxxx K8.KJ9x.QT98.9xx JT9xx.Qxx.Kxxxx. 0.99937 \n",
+      " 1S-P-1N-P-2C-X-2S-P-P-P (7.6)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (7.6) \n",
+      "KJ8xx.QTx.A.KJxx A.8xx.Jxx.AQxxxx Tx.Axx.KT98x.T98 Q9xxx.KJ9x.Qxxx. 0.99919 \n",
+      " 1S-P-1N-P-2C-X-P-2H-P-P-P (6.7)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (6.9) \n",
+      "KJxxx.A.KTx.KJ9x A.8xx.Jxx.AQxxxx xx.QJTxx.A9xx.8x QT98x.K9xx.Q8x.T 0.99895 \n",
+      " 1S-P-1N-P-2C-X-P-P-P (6.3)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (7.5) \n",
+      "K9xxx.x.KQx.KJ8x A.8xx.Jxx.AQxxxx 8x.QTxxx.AT8x.T9 QJTxx.AKJ9.9xx.x 0.99874 \n",
+      " 1S-P-1N-P-2C-X-P-2H-P-P-P (8.1)  \n",
+      " 1S-P-1N-P-2C-P-P-X-P-3C-P-3H-P-P-P (8.1) \n",
+      "QJ9xx.A.ATx.KJT8 A.8xx.Jxx.AQxxxx Kx.KQJxx.9xxx.xx T8xxx.T9xx.KQ8.9 0.99873 \n",
+      " 1S-P-1N-P-2C-X-P-P-P (6.2)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (7.7) \n",
+      "QT9xx.Axx.K.KJxx A.8xx.Jxx.AQxxxx Kx.QT9x.QT8xx.T9 J8xxx.KJx.A9xx.8 0.99854 \n",
+      " 1S-P-1N-P-2C-X-2S-P-P-P (6.3)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (6.3) \n",
+      "KQTxx.xx.Ax.KJT8 A.8xx.Jxx.AQxxxx x.AKT9xx.Q8xx.xx J98xxx.QJ.KT9x.9 0.99842 \n",
+      " 1S-P-1N-P-2C-X-2H-P-P-P (8.0)  \n",
+      " 1S-P-1N-P-2C-P-2H-P-P-P (8.0) \n",
+      "KQJ8x.x.AKQ.JT8x A.8xx.Jxx.AQxxxx xx.KQJ9x.Txxx.Kx T9xxx.ATxx.98x.9 0.99841 \n",
+      " 1S-P-1N-P-2C-X-P-P-P (6.7)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (7.9) \n",
+      "KQJTx.T9.Kx.KJ9x A.8xx.Jxx.AQxxxx x.Jxxxx.AQT9x.T8 98xxxx.AKQ.8xx.x 0.99813 \n",
+      " 1S-P-1N-P-2C-X-P-P-P (5.0)  \n",
+      " 1S-P-1N-P-2C-P-P-P (5.0) \n"
      ]
     }
    ],
@@ -164,16 +189,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Qxx.Q9xx.AT9xx.T K9xxx.AKx.Q8.KJx A.8xx.Jxx.AQxxxx JT8x.JTx.Kxx.98x 0.69\n",
-      "QJ8xx.AT9xx.T.98 KTx.KQJ.AKxx.Jxx A.8xx.Jxx.AQxxxx 9xxx.xx.Q98xx.KT 1.00\n",
-      "T9xx.QT9.K8x.98x xx.AJxx.AQTx.KJx A.8xx.Jxx.AQxxxx KQJ8xx.Kxx.9xx.T 1.00\n",
-      "T8xxx.AK9x.9x.Tx KJx.QTx.AK8xx.K9 A.8xx.Jxx.AQxxxx Q9xx.Jxx.QTx.J8x 0.99\n",
-      "J9xx.Jxx.K9xx.JT Kxxx.AKQx.Q8x.K9 A.8xx.Jxx.AQxxxx QT8x.T9x.ATx.8xx 1.00\n",
-      "8xxxx.KJ.Q9x.J8x QJx.AQx.AKxx.T9x A.8xx.Jxx.AQxxxx KT9x.T9xxx.T8x.K 1.00\n",
-      "Kxxxx.Txx.8xx.T8 Q9x.AQx.AQT9.Kxx A.8xx.Jxx.AQxxxx JT8x.KJ9x.Kxx.J9 1.00\n",
-      "QJ98.JTxxx.AQ.Tx KTx.AKQ.T98xx.Kx A.8xx.Jxx.AQxxxx xxxxx.9x.Kxx.J98 1.00\n",
-      "JTxxxx.x.QT8x.Jx K9x.KQJxx.AKx.Tx A.8xx.Jxx.AQxxxx Q8x.AT9x.9xx.K98 0.47\n",
-      "KQTx.QJT9.xxx.J8 J9xx.AK.KQT8.KTx A.8xx.Jxx.AQxxxx 8xxx.xxxx.A9x.9x 1.00\n"
+      "T8xxx.KJx.KT9x.9 KQ.ATx.AQ8xx.Jxx A.8xx.Jxx.AQxxxx J9xxx.Q9xx.x.KT8 1.00\n",
+      "9xx.xxxx.Qx.KT8x Jxx.AKT9.AK8x.J9 A.8xx.Jxx.AQxxxx KQT8xx.QJ.T9xx.x 1.00\n",
+      "T9xx.QJ9.K9x.Txx KJ8.Kxxx.AQxx.K9 A.8xx.Jxx.AQxxxx Qxxxx.ATx.T8x.J8 1.00\n",
+      "Qxx.T9xx.KTx.J9x KT8x.AKx.AQxx.T8 A.8xx.Jxx.AQxxxx J9xxx.QJx.98x.Kx 1.00\n",
+      "T9xx.KJ.T9xx.T8x Qxx.AT9x.AK8x.Kx A.8xx.Jxx.AQxxxx KJ8xx.Qxxx.Qx.J9 1.00\n",
+      "KT9xxx.Axxxx.xx. Qxx.KQ.A98xx.KJ8 A.8xx.Jxx.AQxxxx J8x.JT9.KQT.T9xx 0.98\n",
+      "Qxxx.Axx.K9xx.J9 KJT9x.QT.AQT.K8x A.8xx.Jxx.AQxxxx 8xx.KJ9xx.8xx.Tx 0.35\n",
+      "Kxxx.AJxx.Q9x.T8 JT8x.KQTx.AKx.KJ A.8xx.Jxx.AQxxxx Q9xx.9x.T8xx.9xx 1.00\n",
+      "JTx.Txxx.Qxx.T9x Q9x.K9.AK9x.KJ8x A.8xx.Jxx.AQxxxx K8xxxx.AQJx.T8x. 1.00\n",
+      "xxxx.Q9xx.9xx.Kx QJxx.AKx.AQxx.Tx A.8xx.Jxx.AQxxxx KT98.JTx.KT8.J98 1.00\n"
      ]
     }
    ],
