--- a/UCBC 2024/Simulations/OpeningLead3S.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead3S.ipynb
@@ -52,12 +52,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-3961000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-1887000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-10724000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-6131000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-1562000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty-1000000\n",
@@ -75,7 +75,15 @@
    "execution_count": 3,
    "id": "c3397678",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loaded lib dds.dll\n"
+     ]
+    }
+   ],
    "source": [
     "# both vulnerable. you are sitting North as dealer and you hold\n",
     "hand = 'AQT8.AKT82.JT.43'\n",
@@ -98,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "DJ"
+       "HA"
       ]
      },
      "execution_count": 4,
@@ -129,14 +137,14 @@
     {
      "data": {
       "text/plain": [
-       "[{'card': 'DJ',\n",
-       "  'insta_score': 0.801,\n",
-       "  'expected_tricks_sd': 8.05,\n",
-       "  'p_make_contract': 0.36},\n",
-       " {'card': 'HA',\n",
-       "  'insta_score': 0.181,\n",
-       "  'expected_tricks_sd': 8.11,\n",
-       "  'p_make_contract': 0.38}]"
+       "[{'card': 'HA',\n",
+       "  'insta_score': 0.14,\n",
+       "  'expected_tricks_sd': 5.65,\n",
+       "  'p_make_contract': 1.0},\n",
+       " {'card': 'DJ',\n",
+       "  'insta_score': 0.848,\n",
+       "  'expected_tricks_sd': 5.75,\n",
+       "  'p_make_contract': 1.0}]"
       ]
      },
      "execution_count": 5,
@@ -170,16 +178,16 @@
     {
      "data": {
       "text/plain": [
-       "['x.Qxxxx.Kxx.Q8xx .Jx.A98xxx.KT9xx KJ9xxxxx.9.Qx.AJ 0.18091',\n",
-       " 'x.Qxx.Axxx.QJ9xx .Jxx.Q98xxx.KT8x KJ9xxxxx.9x.K.Ax 0.17402',\n",
-       " '.Jxxx.K98x.JT8xx K.9x.Axxxxx.Q9xx J9xxxxxx.Qx.Q.AK 0.16004',\n",
-       " 'x.Qxxx.Axx.QJTxx .Jxx.Q98xxxx.K8x KJ9xxxxx.9.K.A9x 0.15511',\n",
-       " 'x.Qxxx.xxx.KQJT9 .9xx.K98xxx.Axxx KJ9xxxxx.J.AQ.8x 0.15314',\n",
-       " 'x.Q9xxx.xxx.K9xx .Jx.AQ9xxx.QJ8xx KJ9xxxxx.x.K8.AT 0.14290',\n",
-       " 'x.QJ9xxx.9xx.Q8x .xx.AQ8xxx.KJT9x KJ9xxxxx..Kx.Axx 0.13079',\n",
-       " '.9xxx.9x.AQJ98xx x.Jxx.K8xxxx.KTx KJ9xxxxx.Q.AQx.x 0.12351',\n",
-       " 'x.Qxx.Qxx.AT98xx .Jxx.K98xxx.QJxx KJ9xxxxx.9x.Ax.K 0.12341',\n",
-       " '9.9xxx.8xx.KQT8x .xx.AKQxxxx.Jxxx KJxxxxxx.QJ.9.A9 0.11148']"
+       "['x.QJ9x.Qxx.A9xxx x.xx.A98xxx.KT8x KJ9xxxx.xx.Kx.QJ 0.44037',\n",
+       " '9.9xxx.Q8x.AT8xx x.Qx.Axxxxx.KJ9x KJxxxxx.Jx.K9.Qx 0.41420',\n",
+       " '.xx.Kxxx.QJTxxxx J.J9x.A98xxx.A98 K9xxxxxx.Qxx.Q.K 0.37477',\n",
+       " 'xx.Q9x.Qxxx.KTxx .xxx.A98xxx.AJ8x KJ9xxxx.Jx.K.Q9x 0.37299',\n",
+       " 'x.J9xx.Q8x.KJ9xx x.Qx.K9xxxx.ATxx KJ9xxxx.xx.Ax.Q8 0.36997',\n",
+       " '.Qxxx.Q9x.KJ98xx xx.Jx.K8xxxx.Axx KJ9xxxx.9x.Ax.QT 0.35911',\n",
+       " 'x.Q9xx.Kxxx.A9xx x.Jx.A98xxx.QT8x KJ9xxxx.xx.Q.KJx 0.34492',\n",
+       " 'x.QJxxx.xx.K8xxx x.xx.KQxxxx.AJ9x KJ9xxxx.9.A98.QT 0.34457',\n",
+       " '.9xxxx.K9xx.A98x xx.x.AQ8xxx.QJxx KJ9xxxx.QJ.x.KTx 0.34323',\n",
+       " 'x.xxxx.Q9xx.AQJx x.x.A8xxxx.KT8xx KJ9xxxx.QJ9.K.9x 0.33780']"
       ]
      },
      "execution_count": 6,
