--- a/UCBC 2024/Simulations/OpeningLead6H.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead6H.ipynb
@@ -52,12 +52,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-3961000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-1887000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-10724000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-6131000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-1562000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty-1000000\n",
@@ -75,7 +75,15 @@
    "execution_count": 3,
    "id": "c3397678",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loaded lib dds.dll\n"
+     ]
+    }
+   ],
    "source": [
     "# both vulnerable. you are sitting North as dealer and you hold\n",
     "hand = 'KQ854.854.JT96.8'\n",
@@ -98,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "SK"
+       "C8"
       ]
      },
      "execution_count": 4,
@@ -129,18 +137,18 @@
     {
      "data": {
       "text/plain": [
-       "[{'card': 'SK',\n",
-       "  'insta_score': 0.263,\n",
-       "  'expected_tricks_sd': 12.65,\n",
-       "  'p_make_contract': 0.94},\n",
+       "[{'card': 'C8',\n",
+       "  'insta_score': 0.23,\n",
+       "  'expected_tricks_sd': 12.5,\n",
+       "  'p_make_contract': 0.1},\n",
        " {'card': 'DJ',\n",
-       "  'insta_score': 0.414,\n",
-       "  'expected_tricks_sd': 12.54,\n",
-       "  'p_make_contract': 0.91},\n",
-       " {'card': 'C8',\n",
-       "  'insta_score': 0.232,\n",
-       "  'expected_tricks_sd': 12.55,\n",
-       "  'p_make_contract': 0.91}]"
+       "  'insta_score': 0.247,\n",
+       "  'expected_tricks_sd': 12.5,\n",
+       "  'p_make_contract': 0.0},\n",
+       " {'card': 'SK',\n",
+       "  'insta_score': 0.407,\n",
+       "  'expected_tricks_sd': 12.7,\n",
+       "  'p_make_contract': 0.0}]"
       ]
      },
      "execution_count": 5,
@@ -174,16 +182,16 @@
     {
      "data": {
       "text/plain": [
-       "['.A9xx.KQx.AKQJxx 9xxx.K.8xxxx.9xx AJTx.QJTxx.A.Txx 0.12598',\n",
-       " 'x.KJxx.Ax.AKQJxx Jxxx.9.Q8xx.9xxx AT9.AQTxx.Kxx.Tx 0.10436',\n",
-       " 'x.AK9x.Kxx.AKQTx JTxx.T.Q8xx.xxxx A9x.QJxxx.Ax.J9x 0.09034',\n",
-       " 'x.ATxx.AKx.AKQTx JT9x.x.8xx.J9xxx Axx.KQJ9x.Qxx.xx 0.08665',\n",
-       " 'J.AJxx.Kx.AKQTxx xxx.x.Q8xxx.J9xx AT9x.KQT9x.Ax.xx 0.08650',\n",
-       " 'A.AT9x.K8x.AKQxx xxx.Jx.Qxx.JT9xx JT9x.KQxx.Axx.xx 0.08297',\n",
-       " 'A.KJ9x.KQx.AK9xx Txxxx.xx.xxx.QTx J9.AQTx.A8x.Jxxx 0.07943',\n",
-       " 'x.AT9x.AK8.AKQTx T9xx.xx.xxxx.9xx AJx.KQJx.Qx.Jxxx 0.07930',\n",
-       " '9.KJ9x.AK.AKQJxx Jxxx.x.Qxxxx.xxx ATx.AQTxx.8x.T9x 0.07679',\n",
-       " 'A.KJTx.AKx.KT9xx JTxxx.x.xxxx.Axx 9x.AQ9xx.Q8.QJxx 0.07632']"
+       "['.AJxx.K8xx.AKJxx JT9x.T9.Qxx.Q9xx Axxx.KQxx.Ax.Txx 0.31481',\n",
+       " '.9xxx.AKQx.AKJxx xxxx.Jx.8xx.QT9x AJT9.AKQT.xx.xxx 0.30424',\n",
+       " '.KJT9.Kxx.AKQTxx T9xx.xx.A8xx.9xx AJxx.AQxx.Qx.Jxx 0.29240',\n",
+       " 'x.AJxx.KQx.AKJxx T9xx.Tx.xxx.QT9x AJx.KQ9x.A8x.xxx 0.29125',\n",
+       " '9.ATxx.KQx.AKQJx JTxx.Jx.8xx.T9xx Axx.KQ9x.Axx.xxx 0.27554',\n",
+       " 'x.AJTx.KQ8.AKJxx JT9.xx.xxxx.9xxx Axxx.KQ9x.Ax.QTx 0.26551',\n",
+       " '.AKJxx.Qx.KQJxxx JT9xx.x.8xxx.A9x Axx.QT9x.AKx.Txx 0.25891',\n",
+       " '.J9xx.AKxx.AKJTx xxxx.Kx.8xx.9xxx AJT9.AQTx.Qx.Qxx 0.25681',\n",
+       " '.AJxx.KQxx.AKQxx JTxxx.QT.8xx.Jxx A9x.K9xx.Ax.T9xx 0.24686',\n",
+       " '.ATxx.Qxx.AKQJTx T9xxx.Q.A8xx.9xx AJx.KJ9xx.Kx.xxx 0.23653']"
       ]
      },
      "execution_count": 6,
