--- a/UCBC 2024/Simulations/OpeningLead6S.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead6S.ipynb
@@ -52,7 +52,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-2584000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-10724000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-6131000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
@@ -76,13 +76,6 @@
    "id": "c3397678",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading DDS: ../..\\bin\\dds.dll\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -146,16 +139,16 @@
       "text/plain": [
        "[{'card': 'HA',\n",
        "  'insta_score': 0.275,\n",
-       "  'expected_tricks_sd': 11.3,\n",
-       "  'p_make_contract': 0.5},\n",
-       " {'card': 'Dx',\n",
-       "  'insta_score': 0.159,\n",
-       "  'expected_tricks_sd': 11.6,\n",
-       "  'p_make_contract': 0.5},\n",
+       "  'expected_tricks_sd': 11.61,\n",
+       "  'p_make_contract': 0.25},\n",
        " {'card': 'CQ',\n",
        "  'insta_score': 0.509,\n",
-       "  'expected_tricks_sd': 11.9,\n",
-       "  'p_make_contract': 0.4}]"
+       "  'expected_tricks_sd': 12.21,\n",
+       "  'p_make_contract': 0.18},\n",
+       " {'card': 'Dx',\n",
+       "  'insta_score': 0.159,\n",
+       "  'expected_tricks_sd': 12.39,\n",
+       "  'p_make_contract': 0.18}]"
       ]
      },
      "execution_count": 5,
@@ -189,16 +182,16 @@
     {
      "data": {
       "text/plain": [
-       "['98xx.Kx.A9.KT8xx ATx.J8x.xxx.9xxx KQJxx.QT.KJTxx.A 0.28185',\n",
-       " 'Txx.Tx.AK.K9xxxx KJxx.Jx.9xxx.T8x AQ98x.KQ8.JTxx.A 0.25795',\n",
-       " 'T98x.8x.Kx.AKTxx Jxx.QTx.9xx.98xx AKQxx.KJ.AJTxx.x 0.25369',\n",
-       " 'Jxx.8x.AK.KT9xxx 98xx.QJTx.JTx.8x AKQTx.K.9xxxx.Ax 0.25150',\n",
-       " 'Kxx.KQx.xx.KT9xx ATxx.T8x.T9xx.xx QJ98x.J.AKJx.A8x 0.25003',\n",
-       " 'K9xx.KJ.Jx.Kxxxx T8x.8xx.xxxx.ATx AQJxx.QT.AKT9.98 0.24588',\n",
-       " 'AJxx.QJx.x.KT9xx T9x.T8.KJxxx.8xx KQ8xx.Kx.AT9x.Ax 0.24342',\n",
-       " 'J9x.KQx.Kxx.KT9x KTxx.T8.9xx.8xxx AQ8xx.Jx.AJTx.Ax 0.24322',\n",
-       " 'A9xx.KJx.xx.KT9x T8x.T8x.KT9x.8xx KQJxx.Q.AJxx.Axx 0.24222',\n",
-       " 'Jxx.KJTx.KJ.KT8x KT98.8x.Txxx.xxx AQxxx.Q.A9xx.A9x 0.24202']"
+       "['T9xx.T.KT9.AK8xx x.KJ8xx.Jxxxx.T9 AKQJ8xx.Q.Ax.xxx 0.41547',\n",
+       " 'Txxx.Kx.xx.AKxxx J.JTx.KJTxxx.8xx AKQ98xx.Q8.A9.T9 0.39986',\n",
+       " '98x.KTx.Jx.AK9xx Tx.J8.K9xxxx.T8x AKQJxxx.Qx.AT.xx 0.39001',\n",
+       " 'T8x.8.Kxxx.AKxxx Jx.QJTx.JT9x.8xx AKQ9xxx.Kx.Ax.T9 0.38990',\n",
+       " 'T9xx.Kx.9x.AKxxx x.QJTx.JTxxx.T98 AKQJ8xx.8.AKx.xx 0.38154',\n",
+       " 'J8x.Tx.K9.AK9xxx xxx.QJ8x.xxxx.8x AKQT9x.K.AJTx.Tx 0.37995',\n",
+       " 'Jxx.K8.Tx.AKT98x T9x.Tx.KJ9xxx.xx AKQ8xx.QJx.Ax.xx 0.37301',\n",
+       " 'J9xx.x.K9x.AKxxx 8x.QT8x.Jxxx.98x AKQTxx.KJ.ATx.Tx 0.36399',\n",
+       " 'AJxx.Kx.xx.KT9xx x.JT8x.T9xxx.A8x KQT98xx.Q.AKJ.xx 0.33872',\n",
+       " 'JT8.Kx.Tx.AK9xxx xxxx.QJ8.J9xxx.x AKQ9x.Tx.AKx.T8x 0.33787']"
       ]
      },
      "execution_count": 6,
