--- a/src/examples/Bidding.ipynb
+++ b/src/examples/Bidding.ipynb
@@ -115,7 +115,7 @@
     "# if South deals we have two pads (because North and East are skipped)\n",
     "# etc.)\n",
     "auction = ['1D', '3S']\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 2, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
@@ -346,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bidder_bots = [BotBid([False, False], hand, models, sampler, False) for hand in hands]"
+    "bidder_bots = [BotBid([False, False], hand, models, sampler,i, False) for i, hand in enumerate(hands)]"
    ]
   },
   {
