--- a/UCBC 2024/Simulations/Multilandy.ipynb
+++ b/UCBC 2024/Simulations/Multilandy.ipynb
@@ -67,55 +67,7 @@
    "execution_count": 2,
    "id": "19dbfeb7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bid PASS value 0.9993 is recommended by NN\n",
-      "0 ['PAD_START', 'PAD_START', 'PAD_START', 'PASS']\n",
-      "sample_cards_auction, nsteps= 1\n",
-      "NS:  1.0 EW:  99.0 Auction:  ['PAD_START', 'PAD_START', 'PAD_START', 'PASS']\n",
-      "nesw_i 0\n",
-      "Player:  N Hand:  QTx.T8.KQT8x.8xx\n",
-      "HCP:  [[12.71 13.18  7.81]]\n",
-      "Shape:  [[3.05 3.8  2.71 3.33 3.09 3.74 2.78 3.23 3.09 3.69 2.8  3.35]]\n",
-      "[[[ 1.   99.    0.    1.   -0.75 -0.14 -0.71  1.   -0.14  0.    0.    1.    0.    1.    0.    0.    1.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    1.    0.    1.    0.    1.\n",
-      "    1.    0.    0.    0.    0.    0.    0.    1.    2.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.  ]]]\n",
-      "[[0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-      "Samples after bidding filtering:  1753  Threshold:  0.25\n",
-      "bid 2S value 0.3910 is recommended by NN\n",
-      "0 ['PAD_START', 'PAD_START', 'PAD_START', 'PASS', 'PASS', '1N', '2C', 'PASS']\n",
-      "sample_cards_auction, nsteps= 2\n",
-      "NS:  1.0 EW:  99.0 Auction:  ['PAD_START', 'PAD_START', 'PAD_START', 'PASS', 'PASS', '1N', '2C', 'PASS']\n",
-      "nesw_i 0\n",
-      "Player:  N Hand:  QTx.T8.KQT8x.8xx\n",
-      "HCP:  [[15.47 13.27  4.33]]\n",
-      "Shape:  [[3.14 3.52 3.13 3.24 3.41 4.11 1.88 3.6  3.11 3.36 3.11 3.38]]\n",
-      "[[[ 1.   99.    0.    1.   -0.75 -0.14 -0.71  1.   -0.14  0.    0.    1.    0.    1.    0.    0.    1.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    1.    0.    1.    0.    1.\n",
-      "    1.    0.    0.    0.    0.    0.    0.    1.    2.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.  ]\n",
-      "  [ 1.   99.    0.    1.   -0.75 -0.14 -0.71  1.   -0.14  0.    0.    1.    0.    1.    0.    0.    1.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    1.    0.    1.    0.    1.\n",
-      "    1.    0.    0.    0.    0.    0.    0.    1.    2.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.  ]]]\n",
-      "[[0.   0.   0.99 0.01 0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
-      "  0.  ]\n",
-      " [0.   1.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
-      "  0.  ]]\n",
-      "Samples after bidding filtering:  118  Threshold:  0.25\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# EW vulnerable.\n",
     "vuln_ns, vuln_ew = False, True\n",
@@ -141,16 +93,16 @@
     {
      "data": {
       "text/plain": [
-       "['QTx.T8.KQT8x.8xx 9xx.AJxx.AJ9.AKx A8x.KQx.xx.QJxxx KJxx.9xxx.xxx.T9 0.81083 \\n P-P-1N-2C-P-2S-P-P-P (5.4)  \\n P-P-1N-2C-P-P-P (7.4)  \\n P-P-1N-2C-P-2D-P-P-P (6.6)  \\n P-P-1N-2C-P-3C-P-P-P (7.4)  \\n P-P-1N-2C-P-2H-P-P-P (4.7)  \\n P-P-1N-2C-P-P-P (7.4) ',\n",
-       " 'QTx.T8.KQT8x.8xx AKxx.KQx.J9x.KJx J8x.Axx.Ax.ATxxx 9xx.J9xxx.xxx.Q9 0.79051 \\n P-P-1N-2C-P-2S-P-P-P (6.3)  \\n P-P-1N-2C-P-P-P (8.1)  \\n P-P-1N-2C-P-2D-P-P-P (7.9)  \\n P-P-1N-2C-P-3C-P-P-P (8.1)  \\n P-P-1N-2C-P-2H-P-P-P (5.3)  \\n P-P-1N-2C-P-P-P (8.1) ',\n",
-       " 'QTx.T8.KQT8x.8xx AK8.xxx.Ax.KJxxx Jxxxx.AKJxx.x.A9 9x.Q9x.J9xxx.QTx 0.75569 \\n P-P-1N-2C-P-2S-3C-P-P-P (8.0)  \\n P-P-1N-2C-P-P-3C-P-3D-P-P-P (6.2)  \\n P-P-1N-2C-P-2D-3C-P-P-P (8.0)  \\n P-P-1N-2C-P-3C-X-P-P-P (4.7)  \\n P-P-1N-2C-P-2H-3C-P-P-P (8.0)  \\n P-P-1N-2C-P-P-3C-P-3D-P-P-P (6.2) ',\n",
-       " 'QTx.T8.KQT8x.8xx AK.J9x.AJxx.Kxxx J98xx.KQxxx..AJ9 xxx.Axx.9xxx.QTx 0.74878 \\n P-P-1N-2C-P-2S-P-P-P (7.8)  \\n P-P-1N-2C-P-P-P (5.5)  \\n P-P-1N-2C-P-2D-P-2S-P-P-P (8.0)  \\n P-P-1N-2C-P-3C-P-P-P (5.5)  \\n P-P-1N-2C-P-2H-P-P-P (7.0)  \\n P-P-1N-2C-P-P-P (5.5) ',\n",
-       " 'QTx.T8.KQT8x.8xx Kxx.K9x.AJxx.AQT AJ8xx.AQJxx.x.Jx 9x.xxx.9xx.K9xxx 0.73182 \\n P-P-1N-2C-P-2S-P-P-P (9.6)  \\n P-P-1N-2C-P-P-P (5.7)  \\n P-P-1N-2C-P-2D-P-2S-P-P-P (9.5)  \\n P-P-1N-2C-P-3C-P-3H-P-P-P (8.7)  \\n P-P-1N-2C-P-2H-P-P-P (8.4)  \\n P-P-1N-2C-P-P-P (5.7) ',\n",
-       " 'QTx.T8.KQT8x.8xx Ax.AKQx.Jxxx.Kxx J9x.J9x.Ax.AQJ9x K8xxx.xxxx.9x.Tx 0.72282 \\n P-P-1N-2C-P-2S-P-P-P (6.1)  \\n P-P-1N-2C-P-P-P (8.3)  \\n P-P-1N-2C-P-2D-P-P-P (7.6)  \\n P-P-1N-2C-P-3C-P-P-P (8.3)  \\n P-P-1N-2C-P-2H-P-P-P (5.2)  \\n P-P-1N-2C-P-P-P (8.3) ',\n",
-       " 'QTx.T8.KQT8x.8xx KJ8.AQJx.Axx.JTx A9xxx.K9xx.x.KQx xx.xxx.J9xx.A9xx 0.70738 \\n P-P-1N-2C-P-2S-P-P-P (8.3)  \\n P-P-1N-2C-P-P-P (5.6)  \\n P-P-1N-2C-P-2D-P-2S-P-P-P (8.1)  \\n P-P-1N-2C-P-3C-P-P-P (5.6)  \\n P-P-1N-2C-P-2H-P-P-P (6.0)  \\n P-P-1N-2C-P-P-P (5.6) ',\n",
-       " 'QTx.T8.KQT8x.8xx A8x.Kxx.AJ9x.A9x KJ9xx.AJ9x.x.Kxx xx.Qxxx.xxx.QJTx 0.70695 \\n P-P-1N-2C-P-2S-P-P-P (8.4)  \\n P-P-1N-2C-P-P-P (5.3)  \\n P-P-1N-2C-P-2D-P-2S-P-P-P (8.4)  \\n P-P-1N-2C-P-3C-P-P-P (5.3)  \\n P-P-1N-2C-P-2H-P-P-P (5.8)  \\n P-P-1N-2C-P-P-P (5.3) ',\n",
-       " 'QTx.T8.KQT8x.8xx 8xx.KQJ.Ax.AQJxx AKJ9x.A9xxx.J9.x xx.xxx.xxxx.KT9x 0.70685 \\n P-P-1N-2C-P-2S-3C-P-P-P (8.3)  \\n P-P-1N-2C-P-P-3C-P-P-P (8.3)  \\n P-P-1N-2C-P-2D-3C-P-P-P (8.3)  \\n P-P-1N-2C-P-3C-X-P-P-P (4.3)  \\n P-P-1N-2C-P-2H-3C-P-P-P (8.3)  \\n P-P-1N-2C-P-P-3C-P-P-P (8.3) ',\n",
-       " 'QTx.T8.KQT8x.8xx J9x.AKxx.A9x.ATx AKxxx.J9xx.x.KJx 8x.Qxx.Jxxx.Q9xx 0.70496 \\n P-P-1N-2C-P-2S-P-P-P (8.2)  \\n P-P-1N-2C-P-P-P (5.3)  \\n P-P-1N-2C-P-2D-P-2S-P-P-P (8.4)  \\n P-P-1N-2C-P-3C-P-P-P (5.3)  \\n P-P-1N-2C-P-2H-P-P-P (5.5)  \\n P-P-1N-2C-P-P-P (5.3) ']"
+       "['QTx.T8.KQT8x.8xx 9xx.AJxx.AJ9.AKx A8x.KQx.xx.QJxxx KJxx.9xxx.xxx.T9 0.81083 \\n P-P-1N-2C-P-2S-P-P-P (5.4)  \\n P-P-1N-2C-P-P-P (7.4)  \\n P-P-1N-2C-P-2D-P-P-P (6.6)  \\n P-P-1N-2C-P-3C-P-P-P (7.4)  \\n P-P-1N-2C-P-2H-P-P-P (4.7) ',\n",
+       " 'QTx.T8.KQT8x.8xx AKxx.KQx.J9x.KJx J8x.Axx.Ax.ATxxx 9xx.J9xxx.xxx.Q9 0.79051 \\n P-P-1N-2C-P-2S-P-P-P (6.3)  \\n P-P-1N-2C-P-P-P (8.1)  \\n P-P-1N-2C-P-2D-P-P-P (7.9)  \\n P-P-1N-2C-P-3C-P-P-P (8.1)  \\n P-P-1N-2C-P-2H-P-P-P (5.3) ',\n",
+       " 'QTx.T8.KQT8x.8xx AK8.xxx.Ax.KJxxx Jxxxx.AKJxx.x.A9 9x.Q9x.J9xxx.QTx 0.75569 \\n P-P-1N-2C-P-2S-3C-P-P-P (8.0)  \\n P-P-1N-2C-P-P-3C-P-3D-P-P-P (6.2)  \\n P-P-1N-2C-P-2D-3C-P-P-P (8.0)  \\n P-P-1N-2C-P-3C-X-P-P-P (4.7)  \\n P-P-1N-2C-P-2H-3C-P-P-P (8.0) ',\n",
+       " 'QTx.T8.KQT8x.8xx AK.J9x.AJxx.Kxxx J98xx.KQxxx..AJ9 xxx.Axx.9xxx.QTx 0.74878 \\n P-P-1N-2C-P-2S-P-P-P (7.8)  \\n P-P-1N-2C-P-P-P (5.5)  \\n P-P-1N-2C-P-2D-P-2S-P-P-P (8.0)  \\n P-P-1N-2C-P-3C-P-P-P (5.5)  \\n P-P-1N-2C-P-2H-P-P-P (7.0) ',\n",
+       " 'QTx.T8.KQT8x.8xx Kxx.K9x.AJxx.AQT AJ8xx.AQJxx.x.Jx 9x.xxx.9xx.K9xxx 0.73182 \\n P-P-1N-2C-P-2S-P-P-P (9.6)  \\n P-P-1N-2C-P-P-P (5.7)  \\n P-P-1N-2C-P-2D-P-2S-P-P-P (9.5)  \\n P-P-1N-2C-P-3C-P-3H-P-P-P (8.7)  \\n P-P-1N-2C-P-2H-P-P-P (8.4) ',\n",
+       " 'QTx.T8.KQT8x.8xx Ax.AKQx.Jxxx.Kxx J9x.J9x.Ax.AQJ9x K8xxx.xxxx.9x.Tx 0.72282 \\n P-P-1N-2C-P-2S-P-P-P (6.1)  \\n P-P-1N-2C-P-P-P (8.3)  \\n P-P-1N-2C-P-2D-P-P-P (7.6)  \\n P-P-1N-2C-P-3C-P-P-P (8.3)  \\n P-P-1N-2C-P-2H-P-P-P (5.2) ',\n",
+       " 'QTx.T8.KQT8x.8xx KJ8.AQJx.Axx.JTx A9xxx.K9xx.x.KQx xx.xxx.J9xx.A9xx 0.70738 \\n P-P-1N-2C-P-2S-P-P-P (8.3)  \\n P-P-1N-2C-P-P-P (5.6)  \\n P-P-1N-2C-P-2D-P-2S-P-P-P (8.1)  \\n P-P-1N-2C-P-3C-P-P-P (5.6)  \\n P-P-1N-2C-P-2H-P-P-P (6.0) ',\n",
+       " 'QTx.T8.KQT8x.8xx A8x.Kxx.AJ9x.A9x KJ9xx.AJ9x.x.Kxx xx.Qxxx.xxx.QJTx 0.70695 \\n P-P-1N-2C-P-2S-P-P-P (8.4)  \\n P-P-1N-2C-P-P-P (5.3)  \\n P-P-1N-2C-P-2D-P-2S-P-P-P (8.4)  \\n P-P-1N-2C-P-3C-P-P-P (5.3)  \\n P-P-1N-2C-P-2H-P-P-P (5.8) ',\n",
+       " 'QTx.T8.KQT8x.8xx 8xx.KQJ.Ax.AQJxx AKJ9x.A9xxx.J9.x xx.xxx.xxxx.KT9x 0.70685 \\n P-P-1N-2C-P-2S-3C-P-P-P (8.3)  \\n P-P-1N-2C-P-P-3C-P-P-P (8.3)  \\n P-P-1N-2C-P-2D-3C-P-P-P (8.3)  \\n P-P-1N-2C-P-3C-X-P-P-P (4.3)  \\n P-P-1N-2C-P-2H-3C-P-P-P (8.3) ',\n",
+       " 'QTx.T8.KQT8x.8xx J9x.AKxx.A9x.ATx AKxxx.J9xx.x.KJx 8x.Qxx.Jxxx.Q9xx 0.70496 \\n P-P-1N-2C-P-2S-P-P-P (8.2)  \\n P-P-1N-2C-P-P-P (5.3)  \\n P-P-1N-2C-P-2D-P-2S-P-P-P (8.4)  \\n P-P-1N-2C-P-3C-P-P-P (5.3)  \\n P-P-1N-2C-P-2H-P-P-P (5.5) ']"
       ]
      },
      "execution_count": 3,
@@ -182,30 +134,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 ['PAD_START', 'PAD_START', 'PAD_START', 'PASS', 'PASS', '1N', '2C', 'PASS']\n",
-      "sample_cards_auction, nsteps= 2\n",
-      "NS:  1.0 EW:  99.0 Auction:  ['PAD_START', 'PAD_START', 'PAD_START', 'PASS', 'PASS', '1N', '2C', 'PASS']\n",
-      "nesw_i 0\n",
-      "Player:  N Hand:  QTx.T8.KQT8x.8xx\n",
-      "HCP:  [[15.47 13.27  4.33]]\n",
-      "Shape:  [[3.14 3.52 3.13 3.24 3.41 4.11 1.88 3.6  3.11 3.36 3.11 3.38]]\n",
-      "[[[ 1.   99.    0.    1.   -0.75 -0.14 -0.71  1.   -0.14  0.    0.    1.    0.    1.    0.    0.    1.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    1.    0.    1.    0.    1.\n",
-      "    1.    0.    0.    0.    0.    0.    0.    1.    2.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.  ]\n",
-      "  [ 1.   99.    0.    1.   -0.75 -0.14 -0.71  1.   -0.14  0.    0.    1.    0.    1.    0.    0.    1.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    1.    0.    1.    0.    1.\n",
-      "    1.    0.    0.    0.    0.    0.    0.    1.    2.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.  ]]]\n",
-      "[[0.   0.   0.99 0.01 0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
-      "  0.  ]\n",
-      " [0.   1.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
-      "  0.  ]]\n",
-      "Samples after bidding filtering:  118  Threshold:  0.25\n",
       "QTx.T8.KQT8x.8xx 9xx.AJxx.AJ9.AKx A8x.KQx.xx.QJxxx KJxx.9xxx.xxx.T9\n",
       "QTx.T8.KQT8x.8xx AKxx.KQx.J9x.KJx J8x.Axx.Ax.ATxxx 9xx.J9xxx.xxx.Q9\n",
       "QTx.T8.KQT8x.8xx AK8.xxx.Ax.KJxxx Jxxxx.AKJxx.x.A9 9x.Q9x.J9xxx.QTx\n",
