--- a/UCBC 2024/Simulations/Bidding4S.ipynb
+++ b/UCBC 2024/Simulations/Bidding4S.ipynb
@@ -51,11 +51,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-3961000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-1887000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-10724000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-6131000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-1562000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty-1000000\n",
@@ -85,7 +86,11 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': 'PASS', 'insta_score': 0.999}]"
+       "[{'call': 'X', 'insta_score': 0.818, 'expected_score': -69, 'adjustment': 41},\n",
+       " {'call': 'PASS',\n",
+       "  'insta_score': 0.182,\n",
+       "  'expected_score': -51,\n",
+       "  'adjustment': 9}]"
       ]
      },
      "execution_count": 3,
@@ -118,7 +123,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '1S', 'insta_score': 0.975}]"
+       "[{'call': '1S', 'insta_score': 0.968}]"
       ]
      },
      "execution_count": 4,
@@ -142,9 +147,13 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '2S', 'insta_score': 0.298, 'expected_score': 126, 'adjustment': 15},\n",
-       " {'call': 'PASS', 'insta_score': 0.49, 'expected_score': -4, 'adjustment': 25},\n",
-       " {'call': '3C', 'insta_score': 0.104, 'expected_score': -44, 'adjustment': 5}]"
+       "[{'call': '2S',\n",
+       "  'insta_score': 0.597,\n",
+       "  'expected_score': 152,\n",
+       "  'adjustment': 299},\n",
+       " {'call': '3S', 'insta_score': 0.191, 'expected_score': 101, 'adjustment': 96},\n",
+       " {'call': '4S', 'insta_score': 0.095, 'expected_score': 82, 'adjustment': 48},\n",
+       " {'call': '2N', 'insta_score': 0.062, 'expected_score': 82, 'adjustment': 31}]"
       ]
      },
      "execution_count": 5,
